# reflex-ros-pkg

./: .travis.yml
reflex/launch/: reflex_takktile2.launch
reflex_control/: CMakeLists.txt  package.xml
reflex_control/config/: reflex_control.yaml
reflex_control/launch/: reflex_control.launch  reflex_control_debug.launch  reflex_control_respawn.launch  reflex_control_v2.launch  spawn_tf.launch
reflex_control/src/: hand_controller.cpp  hand_controller.h  test.cpp  transmissionProximalToDistal.cpp  transmissionProximalToDistal.h  transmissionProximalToDistal_node.cpp  transmissionProximalToDistal_node.h
reflex_description/: CMakeLists.txt  model.config  package.xml
reflex_description/launch/: object_publisher.launch  takktle2_upload.launch
reflex_description/materials/: reflex.gazebo.xacro  reflex.materials.xacro
reflex_description/src/: ContactPlugin.cpp  ContactPlugin.h  gazebo_object_publisher.py
reflex_description/urdf/: cube1.xacro  ikfast71_manipulator.cpp  object_to_catch.urdf  object_to_catch.xacro  object_to_catch.xml  reflex.gazebo.xacro  reflex.transmission.xacro  reflex_takktile_2.urdf  reflex_takktile_2.xacro  reflex_takktile_2_debug.xacro  reflex_takktile_2_tool.xacro  robot_test.urdf  robot_test.xacro  tactile_sensors.xacro  test.urdf
reflex_gazebo/: CMakeLists.txt  README.md  package.xml
reflex_gazebo/launch/: reflex_debug.launch  reflex_gazebo.launch  reflex_test.launch  reflex_test_training_gym.launch  reflex_tool.launch  reflex_tool_debug.launch  reflex_tool_v2.launch  reflex_world.launch  spawn_object.launch
reflex_gazebo/worlds/: contact.world  reflex.world
