<?xml version="1.0"?>
<package>
  <name>reflex_control</name>
  <version>1.4.0</version>
  <description>A package containing controllers used by MoveIt! and Gazebo</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>python-tensorflow-pip</depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>control_msgs</build_depend>
  <!-- <build_depend>tensorflow</build_depend> -->
  <!-- <build_depend>control_msgs</build_depend> -->
<!-- <run_depend>python-tensorflow-pip</run_depend> -->



  <!-- <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend> -->


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <run_depend>iiwa_msgs</run_depend> -->
  <run_depend>gazebo_ros</run_depend>
  <!-- <run_depend>tensorflow</run_depend> -->
  <run_depend>python-tensorflow-pip</run_depend>
  <!-- <run_depend>python-tensorflow-pip</run_depend> -->
  <!-- <run_depend>tensorflow</run_depend> -->

  <run_depend>controller_manager</run_depend>

  <!-- Doesn't use anymore!!! <exec_depend>python-tensorflow-pip</exec_depend> -->

</package>
