<?xml version="1.0"?>
<package>
  <name>reflex_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a Reflex takktle 2 onto Gazebo</description>
  <author email="john@ethz.ch">Jonathan</author>
  <maintainer email="john@ethz.ch">Jonathan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reflex_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
